[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pamplemousse"
version = "0.1.2"
description = "A macOS menu bar Pomodoro timer"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "rich>=13.0",
]
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
pamplemousse = "pamplemousse:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["pamplemousse.py"]
